Header section completed

--- a/blogs.html
+++ b/blogs.html
@@ -53,11 +53,9 @@
             <nav class="d-flex align-items-center justify-content-between mt-2">
                 <a class="m-2 text-dark text-decoration-none fw-semibold nav-item" href="#">News</a>
             </nav>
-
+                
+            </div>
         </header>
-
-        <main>
-        
     </div>
     <!-- Custom Scripts Link: JS Files -->
     <script src="scripts/"></script>
