--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 
                 <nav class="d-inline-flex align-items-center mt-2 mt-md-0 ms-md-auto">
                     <div>
-                        <a class="me-3 py-2 text-dark text-decoration-none fw-semibold nav-item" href="index.html">News</a>
-                        <a class="me-4 py-2 text-dark text-decoration-none fw-semibold nav-item" href="blogs.html">Blogs</a>
-                        <a class="me-4 py-2 text-dark text-decoration-none language-option" href="#">
+                        <a class="me-3 py-2 blue-color text-decoration-none fw-semibold nav-item menu-active" href="index.html">News</a>
+                        <a class="me-4 py-2 blue-color text-decoration-none fw-semibold nav-item" href="blogs.html">Blogs</a>
+                        <a class="me-4 py-2 blue-color text-decoration-none language-option" href="#">
                             <button type="button" class="btn bangla fw-semibold">বাংলা</button>
                         </a>
                     </div>
@@ -51,13 +51,40 @@
             </div>
 
             <nav class="d-flex align-items-center justify-content-between mt-2">
-                <a class="m-2 text-dark text-decoration-none fw-semibold nav-item" href="#">News</a>
+                <a class="m-2 text-black-50 text-decoration-none fw-semibold nav-item" href="#">News</a>
             </nav>
 
         </header>
 
         <main>
-        
+            <section class="my-5">
+                <div class="rounded-2 bg-white">
+                    <h3 class="p-3">4 articles found for sports</h3>
+                </div>
+                <div class="d-flex justify-content-between mt-5">
+                    <div class="d-flex">
+                        <div>
+                            <p class="pt-2 fs-4">Sort By View:</p>
+                        </div>
+                        <div class="ms-2 rounded-2 bg-white">
+                            <a class="px-3 pt-3 nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Default</a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Most Viewed</a></li>
+                                <li><a class="dropdown-item" href="#">Lowest Viewed</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="d-flex">
+                        <div class="pt-2 px-2">
+                            <button class="btn btn-custom fs-4 fw-semibold active">Popular</button>
+                        </div>
+                        <div class="pt-2">
+                            <button class="btn btn-custom fs-4 fw-semibold">Trending</button>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </main>
     </div>
     <!-- Custom Scripts Link: JS Files -->
     <script src="scripts/"></script>
