Overall design completed

--- a/blogs.html
+++ b/blogs.html
@@ -58,34 +58,36 @@
 
         <main>
             <section class="my-5">
-                <div class="rounded-2 bg-white">
-                    <h3 class="p-3">4 articles found for sports</h3>
-                </div>
-                <div class="d-flex justify-content-between mt-5">
-                    <div class="d-flex">
-                        <div>
-                            <p class="pt-2 fs-4">Sort By View:</p>
-                        </div>
-                        <div class="ms-2 rounded-2 bg-white">
-                            <a class="px-3 pt-3 nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Default</a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Most Viewed</a></li>
-                                <li><a class="dropdown-item" href="#">Lowest Viewed</a></li>
-                            </ul>
-                        </div>
+                <article class="p-2">
+                    <div>
+                        <h2>Lorem ipsum dolor sit amet consectetur adipisicing.</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa rem, laborum omnis non, architecto eum quasi porro aliquid alias maxime laboriosam, labore consequatur corrupti a aliquam odit ducimus error molestias quo cupiditate? Mollitia deserunt quae rerum magnam ad hic quasi? Iure eveniet a nam, cum veniam odit facilis nihil repudiandae.</p>
                     </div>
-                    <div class="d-flex">
-                        <div class="pt-2 px-2">
-                            <button class="btn btn-custom fs-4 fw-semibold active">Popular</button>
-                        </div>
-                        <div class="pt-2">
-                            <button class="btn btn-custom fs-4 fw-semibold">Trending</button>
-                        </div>
+                </article>
+                <article class="p-2">
+                    <div>
+                        <h2>Lorem ipsum dolor sit amet consectetur adipisicing.</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa rem, laborum omnis non, architecto eum quasi porro aliquid alias maxime laboriosam, labore consequatur corrupti a aliquam odit ducimus error molestias quo cupiditate? Mollitia deserunt quae rerum magnam ad hic quasi? Iure eveniet a nam, cum veniam odit facilis nihil repudiandae.</p>
                     </div>
-                </div>
+                </article>
+                <article class="p-2">
+                    <div>
+                        <h2>Lorem ipsum dolor sit amet consectetur adipisicing.</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa rem, laborum omnis non, architecto eum quasi porro aliquid alias maxime laboriosam, labore consequatur corrupti a aliquam odit ducimus error molestias quo cupiditate? Mollitia deserunt quae rerum magnam ad hic quasi? Iure eveniet a nam, cum veniam odit facilis nihil repudiandae.</p>
+                    </div>
+                </article>
+                <article class="p-2">                
+                    <div>
+                        <h2>Lorem ipsum dolor sit amet consectetur adipisicing.</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa rem, laborum omnis non, architecto eum quasi porro aliquid alias maxime laboriosam, labore consequatur corrupti a aliquam odit ducimus error molestias quo cupiditate? Mollitia deserunt quae rerum magnam ad hic quasi? Iure eveniet a nam, cum veniam odit facilis nihil repudiandae.</p>
+                    </div>
+                </article>
             </section>
         </main>
     </div>
+    <footer class="bg-white my-5">
+        <p class="text-center py-5 fs-5 fw-semibold text-black-50">Copyright &copy; 2022 News Wall BD</p>
+    </footer>
     <!-- Custom Scripts Link: JS Files -->
     <script src="scripts/"></script>
     <script src="scripts/"></script>
