--- a/index.html
+++ b/index.html
@@ -84,8 +84,35 @@
                     </div>
                 </div>
             </section>
+            <article class="d-flex p-2">
+                <div>
+                    <img src="" alt="Loading...">
+                </div>
+                <div>
+                    <h2>Lorem ipsum dolor sit amet consectetur adipisicing.</h2>
+                    <p class="text-black-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa rem, laborum omnis non, architecto eum quasi porro aliquid alias maxime laboriosam, labore consequatur corrupti a aliquam odit ducimus error molestias quo cupiditate? Mollitia deserunt quae rerum magnam ad hic quasi? Iure eveniet a nam, cum veniam odit facilis nihil repudiandae.</p>
+                    <div class="d-flex align-items-center justify-content-between">
+                        <div>
+                            <img src="" alt="">
+                            <h5>Author Name</h5>
+                        </div>
+                        <div>
+                            <p>1.5M</p>
+                        </div>
+                        <div>
+                            <p>*****</p>
+                        </div>
+                        <div>
+                            <button>Read More</button>
+                        </div>
+                    </div>
+                </div>
+            </article>
         </main>
     </div>
+    <footer class="bg-white my-5">
+        <p class="text-center py-5 fs-5 fw-semibold text-black-50">Copyright &copy; 2022 News Wall BD</p>
+    </footer>
     <!-- Custom Scripts Link: JS Files -->
     <script src="scripts/"></script>
     <script src="scripts/"></script>
