--- a/blogs.html
+++ b/blogs.html
@@ -89,9 +89,8 @@
         <p class="text-center py-5 fs-5 fw-semibold text-black-50">Copyright &copy; 2022 News Wall BD</p>
     </footer>
     <!-- Custom Scripts Link: JS Files -->
-    <script src="scripts/"></script>
-    <script src="scripts/"></script>
-    <script src="scripts/"></script>
+    <script src="scripts/categories.js"></script>
+    <script src="scripts/news.js"></script>
 
     <!-- Bootstrap CDN Link: JS file -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
