--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
     <div class="container py-4">
         <header>
-            <div class="d-flex flex-column flex-md-row align-items-center pb-4 mb-4 border-bottom border-2">
+            <div class="d-flex flex-column col-8 col-sm-8 col-md-4 col-lg-12 flex-md-row align-items-center pb-4 mb-4 border-bottom border-2">
                 <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
                     <title class="d-block blue-color fw-bolder fs-3">News Wall BD</title>
                 </a>
@@ -50,18 +50,20 @@
                 </nav>
             </div>
 
-            <nav class="d-flex align-items-center justify-content-between mt-2">
-                <a class="m-2 text-black-50 text-decoration-none fw-semibold nav-item" href="#">News</a>
+            <nav>
+                <ul id="category-menu" class="d-flex flex-wrap col-8 col-sm-8 col-md-4 col-lg-12 align-items-center justify-content-between mt-2 ps-0">
+
+                </ul>
             </nav>
 
         </header>
 
         <main>
             <section class="my-5">
-                <div class="rounded-2 bg-white">
-                    <h3 class="p-3">4 articles found for sports</h3>
+                <div class="rounded-2 bg-white col-8 col-sm-8 col-md-4 col-lg-12">
+                    <h4 class="p-3">4 articles found for sports</h4>
                 </div>
-                <div class="d-flex justify-content-between mt-5">
+                <div class="d-flex flex-wrap  col-8 col-sm-8 col-md-4 col-lg-12 justify-content-between mt-5">
                     <div class="d-flex">
                         <div>
                             <p class="pt-2 fs-4">Sort By View:</p>
@@ -84,39 +86,42 @@
                     </div>
                 </div>
             </section>
-            <article class="d-flex p-2">
-                <div>
-                    <img src="" alt="Loading...">
-                </div>
-                <div>
-                    <h2>Lorem ipsum dolor sit amet consectetur adipisicing.</h2>
-                    <p class="text-black-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa rem, laborum omnis non, architecto eum quasi porro aliquid alias maxime laboriosam, labore consequatur corrupti a aliquam odit ducimus error molestias quo cupiditate? Mollitia deserunt quae rerum magnam ad hic quasi? Iure eveniet a nam, cum veniam odit facilis nihil repudiandae.</p>
-                    <div class="d-flex align-items-center justify-content-between">
-                        <div>
-                            <img src="" alt="">
-                            <h5>Author Name</h5>
-                        </div>
-                        <div>
-                            <p>1.5M</p>
-                        </div>
-                        <div>
-                            <p>*****</p>
-                        </div>
-                        <div>
-                            <button>Read More</button>
+            <article id="news-section" class=" col-8 col-sm-8 col-md-4 col-lg-12">
+                <!-- --------------------------------------------------------------------------
+                <div id="news-list" class="d-flex p-2">
+                    <div>
+                        <img src="" alt="Loading...">
+                    </div>
+                    <div>
+                        <h2>Lorem ipsum dolor sit amet consectetur adipisicing.</h2>
+                        <p class="text-black-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa rem, laborum omnis non, architecto eum quasi porro aliquid alias maxime laboriosam, labore consequatur corrupti a aliquam odit ducimus error molestias quo cupiditate? Mollitia deserunt quae rerum magnam ad hic quasi? Iure eveniet a nam, cum veniam odit facilis nihil repudiandae.</p>
+                        <div class="d-flex align-items-center justify-content-between">
+                            <div>
+                                <img src="" alt="">
+                                <h5>Author Name</h5>
+                            </div>
+                            <div>
+                                <p>1.5M</p>
+                            </div>
+                            <div>
+                                <p>*****</p>
+                            </div>
+                            <div>
+                                <button>Read More</button>
+                            </div>
                         </div>
                     </div>
                 </div>
+                --------------------------------------------------------------------------- -->                
             </article>
         </main>
     </div>
-    <footer class="bg-white my-5">
+    <footer class="col-8 col-sm-8 col-md-4 col-lg-12 bg-white my-5">
         <p class="text-center py-5 fs-5 fw-semibold text-black-50">Copyright &copy; 2022 News Wall BD</p>
     </footer>
     <!-- Custom Scripts Link: JS Files -->
-    <script src="scripts/"></script>
-    <script src="scripts/"></script>
-    <script src="scripts/"></script>
+    <script src="scripts/categories.js"></script>
+    <script src="scripts/news.js"></script>
 
     <!-- Bootstrap CDN Link: JS file -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
