numbers of news in a category added

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <main>
             <section class="my-5">
                 <div class="rounded-2 bg-white col-12 col-sm-12 col-md-12 col-lg-12">
-                    <h4 class="p-3">4 articles found for sports</h4>
+                    <h4 id="number-of-articles" class="p-3"></h4>
                 </div>
                 <div class="d-flex flex-wrap  col-12 col-sm-12 col-md-12 col-lg-12 justify-content-between mt-5">
                     <div class="d-flex">
