--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title" id="newsDetailsModalLabel">Modal title</h5>
+                            <h5 class="modal-title" id="newsDetailsModalLabel"></h5>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div id="news-details" class="modal-body">
