--- a/index.html
+++ b/index.html
@@ -87,32 +87,7 @@
                 </div>
             </section>
             <article id="news-section" class=" col-12 col-sm-12 col-md-12 col-lg-12">
-                <!-- --------------------------------------------------------------------------
-                <div id="news-list" class="d-flex p-2">
-                    <div>
-                        <img src="" alt="Loading...">
-                    </div>
-                    <div>
-                        <h2>Lorem ipsum dolor sit amet consectetur adipisicing.</h2>
-                        <p class="text-black-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa rem, laborum omnis non, architecto eum quasi porro aliquid alias maxime laboriosam, labore consequatur corrupti a aliquam odit ducimus error molestias quo cupiditate? Mollitia deserunt quae rerum magnam ad hic quasi? Iure eveniet a nam, cum veniam odit facilis nihil repudiandae.</p>
-                        <div class="d-flex align-items-center justify-content-between">
-                            <div>
-                                <img src="" alt="">
-                                <h5>Author Name</h5>
-                            </div>
-                            <div>
-                                <p>1.5M</p>
-                            </div>
-                            <div>
-                                <p>*****</p>
-                            </div>
-                            <div>
-                                <button>Read More</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                --------------------------------------------------------------------------- -->                
+                           
             </article>
             <!-- Modal -->
             <div class="modal fade" id="newsDetailsModal" tabindex="-1" aria-labelledby="newsDetailsModalLabel"
@@ -140,6 +115,14 @@
                     </div>
                 </div>
             </div>
+            <!-- Spinner Section -->
+            <section id="loader-section" class="d-none">
+                <div class="d-flex justify-content-center align-items-center">
+                    <div class="spinner-border text-success" role="status">
+                        <span class="visually-hidden">Loading...</span>
+                    </div>
+                </div>
+            </section>
         </main>
     </div>
     <footer class="col-12 col-sm-12 col-md-12 col-lg-12 bg-white my-5">
